--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
 <div class="container">
    
     <div class="progress">
-    <p>ROASTED TO ORDER, DELIVERED TO YOUR DOOR.
-With our flexible coffee subscription program, you’ll never run out of coffee again. It lets you choose which coffee, how much, and how often you want it.</p>
+    <div id="roasted">
+    <h5>ROASTED TO ORDER, DELIVERED TO YOUR DOOR.
+With our flexible coffee subscription program, you’ll never run out of coffee again. It lets you choose which coffee, how much, and how often you want it.</h5></div>
   <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 0%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
 <p>STEP 1: Pick up your coffee. Not sure what you like? You can always change it later. We're flexible.</p>
@@ -85,7 +86,7 @@ With our flexible coffee subscription program, you’ll never run out of coffee 
   <div class="col">
     <div class="collapse multi-collapse" id="multiCollapseExample1">
       <div class="card card-body">
-        <img src="">
+        <img src="./fruity1-e1448368572438.jpg">
         <p>LIGHT ROAST
 
 Typically from
@@ -96,7 +97,7 @@ Africa, countries like Kenya, Ethiopia, Rwanda</p>
   <div class="col">
     <div class="collapse multi-collapse" id="multiCollapseExample2">
       <div class="card card-body">
-        <img src="">
+        <img src="./classic1-e1448368501774.jpg">
         <p>MEDIUM ROAST
 
 Typically from
@@ -108,7 +109,7 @@ South American countries like Brazil and Colombia</p>
     <div class="col">
     <div class="collapse multi-collapse" id="multiCollapseExample3">
       <div class="card card-body">
-        <img src="">
+        <img src="balanced1-e1448368534719.jpg">
         <p>MEDIUM ROAST
 
 Typically from
@@ -120,7 +121,7 @@ Central American countries like Guatemala & Nicaragua</p>
     <div class="col">
     <div class="collapse multi-collapse" id="multiCollapseExample4">
       <div class="card card-body">
-        <img src="">       
+        <img src="bold1-e1448368595819.jpg">       
         <p>DARK ROAST
 
 Varies
@@ -135,8 +136,14 @@ seasonally, but always dark roasted</p>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script src="app.js"></script>
-	</body>
 
-	
+<!--
+<footer>
+   <span id="footer">
+    Copyright &copy;
+</span>
+</footer>
+-->
+	</body>
 
 	</html>
